--- a/index.html
+++ b/index.html
@@ -9,7 +9,30 @@
 
     </head>
      <body>
-    <body>AluraBooks</body>
+        <body>
+            <header class="cabeçalho">
+                <span class="cabeçalho__menu-hamburguer"></span>
+                <img src="img/Logo.svg" alt="Logo da AluraBooks">
+            </header>
+        </body>
+        <body>
+            <header class="cabeçalho">
+                <span class="cabeçalho__menu-hamburguer"></span>
+                <img src="img/Logo.svg" alt="Logo da AluraBooks">
+                <a href="#"><img src="img/Favoritos.svg"></a>
+                <a href="#"><img src="img/Compras.svg"></a>
+                <a href="#"><img src="img/Usuario.svg"></a>
+            </header>
+        </body>
+        <body>
+            <header class="cabeçalho">
+                <span class="cabeçalho__menu-hamburguer"></span>
+                <img src="img/Logo.svg" alt="Logo da AluraBooks">
+                <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos"></a>
+                <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras"></a>
+                <a href="#"><img src="img/Usuario.svg" alt="Meu perfil"></a>
+            </header>
+        </body>
      </body>
    </html>
             
