--- a/index.html
+++ b/index.html
@@ -1,39 +1,22 @@
 <!DOCTYPE html>
 <html>
     <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="=width=device-width, initial-scale=1.0">
-<title>AluraBooks</title>
-<link rel="stylesheet" href="Reset.css">
-<link rel="stylesheet" href="styles.css">
-
+   <meta charset="UTF-8">
+  <meta name="viewport" content="=width=device-width, inicial-scale="
+  <title>AluraBooks</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="Reset.css">
     </head>
      <body>
-        <body>
-            <header class="cabeçalho">
-                <span class="cabeçalho__menu-hamburguer"></span>
-                <img src="img/Logo.svg" alt="Logo da AluraBooks">
-            </header>
-        </body>
-        <body>
-            <header class="cabeçalho">
-                <span class="cabeçalho__menu-hamburguer"></span>
-                <img src="img/Logo.svg" alt="Logo da AluraBooks">
-                <a href="#"><img src="img/Favoritos.svg"></a>
-                <a href="#"><img src="img/Compras.svg"></a>
-                <a href="#"><img src="img/Usuario.svg"></a>
-            </header>
-        </body>
-        <body>
             <header class="cabeçalho">
                 <span class="cabeçalho__menu-hamburguer"></span>
                 <img src="img/Logo.svg" alt="Logo da AluraBooks">
                 <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos"></a>
                 <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras"></a>
-                <a href="#"><img src="img/Usuario.svg" alt="Meu perfil"></a>
-            </header>
-        </body>
+                <a href="#"><img src="img/Usuário.svg" alt="Meu perfil"></a>
+                </header>
      </body>
-   </html>
+</html>
+        
             
 
