--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
      <body>
             <header class="cabeçalho">
               <div class="container">
+                <input type="checkbox" id="menu" class="container_botao"/>
+                <label for="menu">
                 <span class="cabeçalho__menu-hamburguer"></span>
+                </label>
                 <img src="img/Logo.svg" alt="Logo da AluraBooks">
               </div>
               <div class="container">
