--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
                 <label for="menu">
                 <span class="cabeçalho__menu-hamburguer" container_imagemk></span>
                 </label>
-                <ul class="Lista_menu" >
+                <ul class="Lista_menu">
+                  <li class="lista-menu_titulo">Categorias</li>
+                  <li class="Lista_menu_item"></li>
+                  <li class="Lista_menu_item"></li>
+                  <li class="Lista_menu_item"></li>
+                  <li class="Lista_menu_item"></li>
+                  <li class="Lista_menu_item"></li>
                   </ul>
                 <img src="img/Logo.svg" alt="Logo da AluraBooks">
               </div>
