--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
                 <ul class="Lista_menu">
                   <li class="lista-menu_titulo">Categorias</li>
                   <li class="Lista_menu_item"></li>
-                  <li class="Lista_menu_item"></li>
+                  <a href="#" class="lista_menu_link">Programação</a>
+                  </li>
+                  <li class="lista_menu_item">
+                  <a href="#" class="lista_menu_link"<Front-end</a>
+                  </li>
                   <li class="Lista_menu_item"></li>
                   <li class="Lista_menu_item"></li>
                   <li class="Lista_menu_item"></li>
