--- a/index.html
+++ b/index.html
@@ -16,15 +16,20 @@
                 </label>
                 <ul class="Lista_menu">
                   <li class="lista-menu_titulo">Categorias</li>
-                  <li class="Lista_menu_item"></li>
+                  <li class="Lista_menu_item">
                   <a href="#" class="lista_menu_link">Programação</a>
                   </li>
                   <li class="lista_menu_item">
                   <a href="#" class="lista_menu_link"<Front-end</a>
                   </li>
-                  <li class="Lista_menu_item"></li>
-                  <li class="Lista_menu_item"></li>
-                  <li class="Lista_menu_item"></li>
+                  <a href="#" class="Lista_menu_link">Infraestrutura>/a>
+                  </li>
+                  <li"Lista_menu_item">
+                  ><a href="#" class="lista_menu_link">Business</a>
+                  </li>
+                  <li class="Lista_menu_item">
+                  <a href="#" class="lista_menu_link">design & UX</a>
+                  </li>
                   </ul>
                 <img src="img/Logo.svg" alt="Logo da AluraBooks">
               </div>
